# src/application/docs/swagger.json
@@ -13,7 +13,7 @@
       "post": {
         "summary": "Cadastra usuário",
         "description": "Cadastra um usuário com base em nome, email e senha fornecidos. Retorna token JWT no header da resposta, dentro de Authorization.",
-        "tags": ["Autenticação"],
+        "tags": ["Authenticate"],
         "parameters": [
           {
             "in": "body",
@@ -125,7 +125,7 @@
       "post": {
         "summary": "Autentica usuário",
         "description": "Autentica um usuário com base no email e na senha fornecidos. Retorna token JWT no header da resposta, dentro de Authorization.",
-        "tags": ["Autenticação"],
+        "tags": ["Authenticate"],
         "parameters": [
           {
             "in": "body",
@@ -207,7 +207,7 @@
       "post": {
         "summary": "Cadastra um filme",
         "description": "Cadastra um novo filme no sistema.",
-        "tags": ["Filme"],
+        "tags": ["Movie"],
         "parameters": [
           {
             "in": "header",
@@ -244,7 +244,7 @@
         ],
         "responses": {
           "201": {
-            "description": "OK"
+            "description": "Created"
           },
           "400": {
             "description": "Bad Request",
@@ -301,6 +301,242 @@
                   "message": "Invalid field category. It must contain only allowed categories: 'Ação', 'Aventura', 'Comédia', 'Drama', 'Ficção Científica', 'Terror', 'Romance', 'Animação', 'Documentário', 'Fantasia'."
                 }
               ]
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "message": "Token missing."
+                },
+                {
+                  "message": "Invalid token."
+                }
+              ]
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal Server Error."
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/review": {
+      "post": {
+        "summary": "Cadastra uma crítica",
+        "description": "Cadastra uma nova crítica no sistema.",
+        "tags": ["Review"],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Token Bearer",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "path",
+            "name": "movieId",
+            "description": "Id do filme",
+            "required": false,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Dados que devem ser enviados na requisição",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "description": {
+                  "type": "string"
+                },
+                "rating": {
+                  "type": "number"
+                },
+                "isLiked": {
+                  "type": "boolean"
+                }
+              },
+              "required": ["description", "rating"]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "message": "Invalid field isLiked. It must be a boolean."
+                },
+                {
+                  "message": "Invalid field title. It must be a string."
+                },
+                {
+                  "message": "Field description cannot be empty."
+                },
+                {
+                  "message": "Invalid field rating. It must be a float with two decimal places."
+                },
+                {
+                  "message": "Field rating cannot be empty."
+                },
+                {
+                  "message": "Field movieId must be no less than 1."
+                },
+                {
+                  "message": "Invalid field movieId. It must be a number."
+                }
+              ]
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "examples": {
+              "application/json": [
+                {
+                  "message": "Token missing."
+                },
+                {
+                  "message": "Invalid token."
+                }
+              ]
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Internal Server Error."
+                }
+              }
+            }
+          }
+        }
+      },
+      "get": {
+        "summary": "Lista as críticas",
+        "description": "Lista todas as críticas cadastradas no sistema.",
+        "tags": ["Review"],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Token Bearer",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "totalItems": {
+                  "type": "integer"
+                },
+                "currentPage": {
+                  "type": "integer"
+                },
+                "limit": {
+                  "type": "integer"
+                },
+                "totalPages": {
+                  "type": "integer"
+                },
+                "items": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "reviewId": {
+                        "type": "integer"
+                      },
+                      "description": {
+                        "type": "string"
+                      },
+                      "rating": {
+                        "type": "number"
+                      },
+                      "movie": {
+                        "type": "object",
+                        "properties": {
+                          "title": {
+                            "type": "string"
+                          },
+                          "image": {
+                            "type": "string"
+                          },
+                          "description": {
+                            "type": "string"
+                          },
+                          "year": {
+                            "type": "integer"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
             }
           },
           "401": {
