# src/data/entities/Movie.ts
@@ -3,8 +3,8 @@ import { Review } from "./Review";
 
 @Entity()
 class Movie {
-  @PrimaryGeneratedColumn()
-  id: number;
+  @PrimaryGeneratedColumn({ name: "movie_id" })
+  movieId: number;
 
   @Column()
   title: string;
@@ -17,6 +17,9 @@ class Movie {
 
   @Column()
   description: string;
+
+  @Column()
+  year: number;
 
   // Relacionamento com Review (Um Movie tem muitas Reviews)
   @OneToMany(() => Review, (review) => review.movie)
